Add thread visualizer and OpenMP support to RayTracing
Introduced a ThreadVisualizer class to display thread activity and status in the RayTracing simulation. Enabled OpenMP support in the project file and refactored main.cpp to parallelize key simulation steps with thread visualization. Also added SPH_Simulation.txt and removed various build and log artifacts.

--- a/RayTracing/RayTracing.vcxproj
+++ b/RayTracing/RayTracing.vcxproj
@@ -106,6 +106,7 @@
       <PreprocessorDefinitions>_DEBUG;;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <AdditionalIncludeDirectories>$(DXLIB_DIR)</AdditionalIncludeDirectories>
       <LanguageStandard>stdcpp20</LanguageStandard>
+      <OpenMPSupport>true</OpenMPSupport>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
